--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ITMD-361 Lab 5</title>
-	<link rel="stylesheet" href="css/style.css>
+	<title>ITMD 361 Lab 5</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+	<div id="heading">
+		<h1>Planet Comparison</h1>
+	</div>
+	<div id="planet_table">
+		<table>
+			<tbody>
+				<tr>
+					<th>"Planet"</th>
+					<th>"Mass (kg)"</th>
+					<th>"Diameter (km)"</th>
+					<th>"Mean density (km/m"<sup>3</sup>")"</th>
+					<th>"Escape velocity (m/s)"</th>
+					<th>"Average distance from Sun"</th>
+					<th>"Rotation period (length of day in Earth days)"</th>
+					<th>"Revolution period (length of year in Earth days)"</th>
+				</tr>	
+			</tbody>
+	</div>
+	
 </body>
 </html>
