--- a/index.html
+++ b/index.html
@@ -14,16 +14,56 @@
 	<div id="planet_table">
 		<table>
 			<tbody>
-				<tr>
-					<th>"Planet"</th>
-					<th>"Mass (kg)"</th>
-					<th>"Diameter (km)"</th>
-					<th>"Mean density (km/m"<sup>3</sup>")"</th>
-					<th>"Escape velocity (m/s)"</th>
-					<th>"Average distance from Sun"</th>
-					<th>"Rotation period (length of day in Earth days)"</th>
-					<th>"Revolution period (length of year in Earth days)"</th>
-				</tr>	
+				<tr class="table_heading">
+					<th>Planet</th>
+					<th>Mass (kg)</th>
+					<th>Diameter (km)</th>
+					<th>Mean density (km/m"<sup>3</sup>")</th>
+					<th>Escape velocity (m/s)</th>
+					<th>Average distance from Sun</th>
+					<th>Rotation period (length of day in Earth days)</th>
+					<th>Revolution period (length of year in Earth days)</th>
+				</tr>
+				<tr class="table_info">
+					<td>Earth</td>
+					<td>5.98 X 10<sup>24</sup></td>
+					<td>12,756</td>
+					<td>5,520</td>
+					<td>11,200</td>
+					<td>1 AU (149,597,890 km)</td>
+					<td>1 (23.93 hours)</td>
+					<td>365.26</td>
+				</tr>
+				<tr class="table_info">
+					<td>Mercury</td>
+					<td>3.3 X 10<sup>23</sup></td>
+					<td>4,879.4</td>
+					<td>5,420</td>
+					<td>4,300</td>
+					<td>0.387 AU (57,909,175 km)</td>
+					<td>58.65</td>
+					<td>87.97</td>
+				</tr>
+				<tr class="table_info">
+					<td>Mars</td>
+					<td>6.42 X 10<sup>23</sup></td>
+					<td>6,787</td>
+					<td>3,940</td>
+					<td>5000</td>
+					<td>1.524 AU (227,936,640 km)</td>
+					<td>1.026</td>
+					<td>686.98</td>
+				</tr>
+				<tr class="table_info">
+					<td>Saturn</td>
+					<td>5.69 X 10<sup>26</sup></td>
+					<td>120,660</td>
+					<td>690</td>
+					<td>35,600</td>
+					<td>9.537 AU (1,426,725,400 km)</td>
+					<td>0.44 (10.2 Earth hours)</td>
+					<td>29.46</td>
+				</tr>
 			</tbody>
 	</div>
 	
