--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div id="heading">
-		<h1>Planet Comparison</h1>
+		<h1>Planet Data Comparison</h1>
 	</div>
 	<div id="planet_table">
 		<table>
