--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</div>
 	<div id="footer">
 		<footer>
-			<h4>The data was referenced from <a href="https://pds.nasa.gov/planets/special/planets.htm" title="NASA">NASA</a>
+			<h4>The data was referenced from <a href="https://pds.nasa.gov/planets/special/planets.htm" title="NASA">NASA</a></h4>
 		</footer>
 	</div>
 </body>
